[package]
name = "updatehosts4r"
version = "1.0.0"
edition = "2024"
description = "Command-line utility to update and manage the system hosts file."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/qchen-fdii-cardc/updatehosts4r"

[[bin]]
name = "updatehosts4r"
path = "src/main.rs"

[dependencies]
chrono = "0.4.40"
crossbeam = "0.8.4"
regex = "1.11.1"
reqwest = {version = "0.12.15", features = ["blocking"]}
